--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,8 +1,11 @@
-:root {
-  --clr-bg-light: hsl(0, 0%, 98%);
-  --clr-bg-dark: hsl(207, 26%, 17%);
-  --clr-neutral-100: hsl(0, 0%, 100%);
-  --clr-neutral-300: hsl(0, 0%, 52%);
-  --clr-neutral-500: hsl(200, 15%, 8%);
-  --clr-neutral-600: hsl(209, 23%, 22%);
+.darkMode:root {
+  --clr-bg: hsl(207, 26%, 17%);
+  --clr-font: hsl(0, 0%, 100%);
+  --clr-element: hsl(209, 23%, 22%);
+}
+
+.lightMode:root {
+  --clr-bg: hsl(0, 0%, 98%);
+  --clr-font: hsl(200, 15%, 8%);
+  --clr-element: hsl(0, 0%, 100%);
 }
